--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 <header class="main-header" role="banner">
   <div class="grid">
     <div class="grid__col--12">
-      <a class="site-logo" href="/" title="UXRant.me – Home">
+      <a class="site-logo" href="{{ site.baseurl }}/" title="UXRant.me – Home">
         UXRants
       </a>
       <nav class="navbar" role="navigation">
